# IU3.2

./: .mxproject  CMakeCache.txt  CMakeLists.txt  ChangeLOG.txt  CubeMX.ioc  IU3.2.code-workspace  IU32.codediagram  STM32L476RCTx_FLASH.ld  build.ninja  cmake_install.cmake  compile_commands.json
Core/Inc/: FreeRTOSConfig.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Core/Src/: GPIO.c  Init.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_hal_timebase_tim.c  stm32l4xx_it.c
Core/Src/Bin_to_bin/: Decode.py  bin.py
FATFS/App/: fatfs.c  fatfs.h
Middlewares/ST/STM32_Cryptographic/: Release_Notes.html
Middlewares/ST/STM32_Cryptographic/include/: cmox_init.h
Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc/: usbd_cdc.h
Middlewares/ST/STM32_USB_Device_Library/Core/Inc/: usbd_def.h
Middlewares/ST/STM32_USB_Host_Library/Core/Src/: usbh_core.c
USB_DEVICE/App/: usb_device.c  usb_device.h  usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c  usbd_storage_if.c
USB_HOST/App/: usb_host.c  usb_host.h
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
